FEAT: tính năng giỏ hàng và thanh toán.